--- a/index.html
+++ b/index.html
@@ -197,4 +197,24 @@
     </div>
   </div>
 </body>
+  <script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00DKZ00000D9GQc',
+				'Whatsapp_Messaging',
+				'https://co1755698197575.my.site.com/ESWWhatsappMessaging1756276676964',
+				{
+					scrt2URL: 'https://co1755698197575.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://co1755698197575.my.site.com/ESWWhatsappMessaging1756276676964/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 </html>
