--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <img src="https://i.pravatar.cc/40?img=1" alt="">
         <div class="info">
           <h4>Nowfal</h4>
-          <p>"How are you?"</p>
+          <p>"How are you"</p>
         </div>
       </div>
       <div class="chat">
