--- a/index.html
+++ b/index.html
@@ -186,10 +186,12 @@
       </div>
     </div>
     <div class="messages">
-      <div class="message received">We should video chat to discuss, if you’re up for it!</div>
-      <div class="message sent">Sure</div>
-      <div class="message sent">I’m free now!</div>
-      <div class="message received">Awesome! I’ll start a video chat with you in a few.</div>
+      <div class="message received">Hey, Arnav Sharma </div>
+      <div class="message sent">I am an OLX agent. Thank you for being a valued dealer with OLX — we truly appreciate your association with us.<br></br>
+		  We would like to inform you that your dealership expired 5 days ago. Could you please let us know if you would like to renew it,
+		  or if you’d prefer to have a quick conversation with our team regarding the next steps? </div>
+		      <div class="message sent">Sure</div>
+
     </div>
     <div class="chat-input">
       <input type="text" placeholder="Type a message">
