--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
     <div class="chat-header">
       <img src="https://i.pravatar.cc/40?img=4" alt="">
       <div>
-        <h4>Leo</h4>
+        <h4>Olx Agent</h4>
         <p>Online</p>
       </div>
     </div>
     <div class="messages">
-      <div class="message received">Hey, Arnav Sharma </div>
+      <div class="message sent">Hey, Arnav Sharma </div><br></br>
       <div class="message sent">I am an OLX agent. Thank you for being a valued dealer with OLX — we truly appreciate your association with us.<br></br>
 		  We would like to inform you that your dealership expired 5 days ago. Could you please let us know if you would like to renew it,
-		  or if you’d prefer to have a quick conversation with our team regarding the next steps? </div>
+		  or if you’d prefer to have a quick conversation with our team regarding the next steps? </div><br></br>
 		      <div class="message sent">Sure</div>
 
     </div>
