--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="message sent">I am an OLX agent. Thank you for being a valued dealer with OLX — we truly appreciate your association with us.<br></br>
 		  We would like to inform you that your dealership expired 5 days ago. Could you please let us know if you would like to renew it,
 		  or if you’d prefer to have a quick conversation with our team regarding the next steps? </div><br></br>
-		      <div class="message sent">Sure</div>
+		      <div class="message received">Sure</div>
 
     </div>
     <div class="chat-input">
