--- a/index.html
+++ b/index.html
@@ -155,21 +155,21 @@
       <div class="chat">
         <img src="https://i.pravatar.cc/40?img=1" alt="">
         <div class="info">
-          <h4>Nowfal</h4>
+          <h4>Rs Maan</h4>
           <p>"How are you"</p>
         </div>
       </div>
       <div class="chat">
         <img src="https://i.pravatar.cc/40?img=2" alt="">
         <div class="info">
-          <h4>Rohan</h4>
+          <h4>Arun Sharma</h4>
           <p>"I'll be there."</p>
         </div>
       </div>
       <div class="chat">
         <img src="https://i.pravatar.cc/40?img=3" alt="">
         <div class="info">
-          <h4>Zoya</h4>
+          <h4>Piyush Chouthwani</h4>
           <p>"Make somebody's day."</p>
         </div>
       </div>
